--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,14 @@
                 About project
             </div>
             <div class="card-body">
-                <p class="card-text">Hello I am Pranit Bane, In this project I have created an end to end ML project that aims to predict the Insurance Premium Price that cover for a 4 specific region base on person age, bmi, sex, no of children, smoker and region criteria, with these data we can easily predict our insurance expenses.
-                    Technical excerpt : I have used Flask API and HTML for front end development. The code base has been deployed in Heroku cloud using Github Action. </p>
+                <p class="card-text">
+                    <h4>GROUP MEMBERS</h4>
+                    <H5>ANIRUDDHA VAZE</H5>
+                    <H5>NITISH KATKADE</H5>
+                    <H5>PRUTHVI BELGAONKAR</H5>
+                    <H5>SHREYASH MANDAVKAR</H5>
+                    In this project We have created an end to end ML project that aims to predict the Insurance Premium Price that cover for a 4 specific region base on person Age, Bmi, Sex, No Of Children, Smoker and Region criteria, with these data we can easily predict our insurance expenses.
+                    Technical excerpt : We have used Flask API and HTML for front end development. The code base has been deployed in Heroku cloud using Github Action.Whole CI/CD pipeline has been established. </p>
             </div>
         </div>
         </div>
