--- a/templates/header.html
+++ b/templates/header.html
@@ -7,6 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+
+        <!-- Vendor CSS Files -->
+        <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+        <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+        <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+        <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+      
+        <!-- Template Main CSS File -->
+        <link href="../assets/css/main.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/778c911bcf.js" crossorigin="anonymous"></script>
     <style>
    
@@ -39,8 +50,10 @@ table-layout: fixed;
         text-align:left;
     word-wrap: break-word;
 }
+
+
 </style>
-<body style="background-color: #f1f1f1;">
+<body style="background: linear-gradient(to right, #eecda3, #ef629f);">
 
 
 
@@ -92,7 +105,7 @@ table-layout: fixed;
         <div class="col-md-2 col-sm-12 col-lg-2">
             <ul class=" list-group ">
                 <li class="list-group-item py-1  {% if 'log' in request.path %} active {% endif %}">
-                    <a  style=" text-decoration: none;color:black" href="/logs">View Logs</a>
+                    <a  style=" text-decoration: none;color:black " href="/logs">View Logs</a>
                 </li>
                 <li class="list-group-item py-1 {% if 'artifact' in request.path %} active {% endif %}">
                     <a style=" text-decoration: none;color:rgb(0, 0, 0)" href="/artifact">View Artifacts</a>
@@ -172,6 +185,16 @@ table-layout: fixed;
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
 
+        <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../assets/vendor/aos/aos.js"></script>
+  <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
