--- a/templates/predict.html
+++ b/templates/predict.html
@@ -10,14 +10,14 @@ integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jI
 {% block content %}
 
 <div class="row">
-    <div class="col-md-6 col-sm-12 col-xs-6 col-lg-6" style="border:2px solid black; border-radius:10px;  background: linear-gradient(to right, #000428, #004e92);">
+    <div class="col-md-6 col-sm-12 col-xs-6 col-lg-6" style="border:2px solid black; border-radius:10px;  background: linear-gradient(to right, #b005b3, #004e92);">
 
 
         <form action="/predict" method="post">
-            <legend>Insurance Premium Estimation Form</legend>
+            <legend style="color: white;">Insurance Premium Estimation Form</legend>
             <div class="mb-3">
                 <label class="form-label">age</label>
-                <input class="form-control" type="text" name="age" placeholder="Enter a value of age"
+                <input class="form-control" type="text"  name="age" placeholder="Enter a value of age"
                     required />
             </div>
             <div class="mb-3">
